<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0.2dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/white"
    android:foreground="?android:attr/selectableItemBackground">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/imgClienteI"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/bienv"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/tvidclienteI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_cliente_item"
            android:visibility="gone"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvuidclienteI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_cliente_item"
            android:visibility="gone"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvnombreI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorRoyalBlue"
            android:text="@string/nombre_cliente_item"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvapellidosI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorRoyalBlue"
            android:text="@string/apellido_cliente_item"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvcorreoI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/correo_cliente_item"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvdniI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni_cliente_item"
            android:visibility="gone"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvtelefonoI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorMagenta"
            android:text="@string/telefono_cliente_item"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/tvdireccionI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/direccion_cliente_Item"
            android:layout_marginTop="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>