<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@drawable/fondo2">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="misson.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

        </com.airbnb.lottie.LottieAnimationView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombres"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/colorRoyalBlue"
            app:hintTextColor="@color/colorRoyalBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etnombrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombres"
                android:textColor="@color/white"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellidos"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/colorRoyalBlue"
            app:hintTextColor="@color/colorRoyalBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etapellidor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellidos"
                android:inputType="text"
                android:textColor="@color/white"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/colorRoyalBlue"
            app:hintTextColor="@color/colorRoyalBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etcorreor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/lbl_passwordr"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:boxStrokeColor="@color/colorRoyalBlue"
            app:hintTextColor="@color/colorRoyalBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpasswordr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:boxStrokeColor="@color/colorRoyalBlue"
            app:hintTextColor="@color/colorRoyalBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etconfipasswordr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirmar"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnregistarusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"
            android:backgroundTint="@color/colorRoyalBlue"
            android:textColor="@color/white"
            android:layout_marginStart="45dp"
            android:textStyle="bold"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/lbl_loginr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/lbl_ir_login"
            android:textSize="20sp"
            android:textColor="@color/colorMagenta"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>


