<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg8"
    tools:context=".Clientes.AgregarClienteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_cli"
            android:textStyle="bold"
            android:textSize="26sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvuidclientecli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uid_usuario"
            android:textSize="18sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imgFotoCliente"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bienv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnTomarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cámara"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btnGaleria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Galería" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etnombrescli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cli"
                android:drawableLeft="@drawable/icono_nombre"
                android:drawablePadding="15sp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etapellidoscli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos_cli"
                android:drawableLeft="@drawable/icono_nombre"
                android:drawablePadding="15sp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etcorreocli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_cli"
                android:drawableLeft="@drawable/correo_icon"
                android:drawablePadding="15sp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etdnicli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni_cli"
                android:drawableLeft="@drawable/dni_icon"
                android:drawablePadding="15sp"
                android:inputType="number"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/ettelefonocli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefon_cli"
                android:drawableLeft="@drawable/telefono_icon"
                android:drawablePadding="15sp"
                android:inputType="number"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etdireccioncli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_cli"
                android:drawableLeft="@drawable/direccion_icon"
                android:drawablePadding="15sp"
                android:inputType="text"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnguardarcli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:drawableLeft="@drawable/guardar_icon"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

</ScrollView>