<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/fondoblanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollo"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="15sp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono_dev"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_dev"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btntelefonodev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/tel"
                    android:scaleType="centerCrop"
                    android:background="@null"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btnyoutubedev"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/youtube_dev"
                    android:scaleType="centerCrop"
                    android:background="@null"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnvolverdv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

</ScrollView>